lab1/Test/L1-A-7-25.cmm
int ;
int YB2aG8QMsG ( struct X3E2RKJPVyCMoX {
}pNUGU , struct {
  struct fzzjYaQfk QmOrQs = lYfwBd3vngbRYg3L_hW3 || 
    uw573q7mKmJ && E5cOLKPyBynlIAhFs != OqYACC0kDyTlLvb 
    - O2uF5orcTQa0UQfAiK * ! SOTU31T ( lAr0vJoyWU = ZRDsz5Lcsc2 
    > Qn1UNQ6981bXE7Z + asS5NnNRARnCy / ! yp5hiLcJq3xH 
    [ eLWmCKYOGiZTafvGsv = wS5vewhV4 || KV && Os0 < ( 
    GZpN2Ux8vSa [ boi5 = NyBadNgRTyiU >= CBkq0eDVL * ( 
    UE6de10V4HJ2T0p <= NidK - ( qB6yeR / ( Fno8IIP5r != 
    jRSKJV6pwEVQv / giSaKQzH [ ( UKB8B7djlZ2HgyPTNRO = 
    SKc_c93qJwNS || bbl >= ( ( f40OI6 = IObb7XsIv_bsF 
    = mn && w ( dgPAHRLD , UyJOQhygYjawDAi_ ) ) ) ) . 
    JJY = - t39GmORwNA27iwaIE ] / ! - hyJ66M6NJ0B * VdXV 
    / pbFCp27aZjsYZjS @) + ! - - XhCDmyilGb ) ) ] * 972194366 
    / 1226130638.2116639536 ) ] . rEK / qRe8CTJTzrNttZ 
    ) == - vgNqwtC ( ) , xgoqRoG ;
}@zYvAQco ) {
}
float HQXHMwVx0Gnr , SKaCgNKXBj [ 1671466267 ] 

;
int ;%
int oyLrcHu0ABBI88N ( ) {
  if ( Wz3y1enonc9pDxmQ )   tzZ ;
else   if ( wI )   if ( LMUQWgtOeancAEpa )   WcxzQ9cbOiC 
    ;
else   if ( AymkHPq1I )   pbimX ;
else   if ( uAukOLV )   while ( yDBw ) `  if ( gaRuP4EHl 
    )   C ;
else {
  }

else   if ( qw4lYXwbvlhv )   QMwrcc ;






  return EmPjfOUNTD ;
}
`